--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-tensorflow==2.7.0  # Works with Python 3.8
-uvicorn==0.17.0  # Compatible with FastAPI and Python 3.8
-fastapi==0.78.0  # Compatible with Python 3.8
-pydantic==1.10.2  # Works with FastAPI 0.78.0 and Python 3.8
+# TensorFlow for the sentiment model (pre-installed with tensorflow/tensorflow:2.7.0 Docker image)
+fastapi==0.78.0             # FastAPI for building the web API
+uvicorn==0.17.0             # Uvicorn for running the FastAPI server
+pydantic==1.10.2            # Data validation using Pydantic (v1.x, compatible with FastAPI 0.78.0)
+pytest==7.4.2               # Pytest for running unit and integration tests
